--- a/Flat-Remix-GTK-Red-Darker-Solid/cinnamon/cinnamon.css
+++ b/Flat-Remix-GTK-Red-Darker-Solid/cinnamon/cinnamon.css
@@ -19,7 +19,7 @@ stage {
   .popup-menu #notification .notification-button:focus, .popup-menu #notification .notification-icon-button:focus, .notification-button:focus, .notification-icon-button:focus, .modal-dialog-button-box .modal-dialog-button:focus, .sound-button:focus {
     color: #5C616C;
     background-color: white;
-    border: 1px solid #d41919;
+    border: 1px solid #ec0101;
     box-shadow: inset 0 2px 4px rgba(255, 255, 255, 0.05); }
   .popup-menu #notification .notification-button:hover, .popup-menu #notification .notification-icon-button:hover, .notification-button:hover, .notification-icon-button:hover, .modal-dialog-button-box .modal-dialog-button:hover, .sound-button:hover {
     color: #5C616C;
@@ -29,13 +29,13 @@ stage {
   .popup-menu #notification .notification-button:hover:focus, .popup-menu #notification .notification-icon-button:hover:focus, .notification-button:hover:focus, .notification-icon-button:hover:focus, .modal-dialog-button-box .modal-dialog-button:hover:focus, .sound-button:hover:focus {
     color: #5C616C;
     background-color: white;
-    border: 1px solid #d41919;
+    border: 1px solid #ec0101;
     box-shadow: inset 0 2px 4px rgba(255, 255, 255, 0.05); }
   .popup-menu #notification .notification-button:active, .popup-menu #notification .notification-icon-button:active, .notification-button:active, .notification-icon-button:active, .modal-dialog-button-box .modal-dialog-button:active, .sound-button:active, .popup-menu #notification .notification-button:active:focus, .popup-menu #notification .notification-icon-button:active:focus, .notification-button:active:focus, .notification-icon-button:active:focus, .modal-dialog-button-box .modal-dialog-button:active:focus, .sound-button:active:focus {
     color: white;
-    background-color: #d41919;
-    border: 1px solid #d41919;
-    box-shadow: inset 0 2px 4px #d41919; }
+    background-color: #ec0101;
+    border: 1px solid #ec0101;
+    box-shadow: inset 0 2px 4px #ec0101; }
   .popup-menu #notification .notification-button:insensitive, .popup-menu #notification .notification-icon-button:insensitive, .notification-button:insensitive, .notification-icon-button:insensitive, .modal-dialog-button-box .modal-dialog-button:insensitive, .sound-button:insensitive {
     color: rgba(92, 97, 108, 0.55);
     border: 1px solid rgba(227, 227, 227, 0.55);
@@ -45,7 +45,7 @@ stage {
 .popup-menu #notification StEntry, #menu-search-entry {
   padding: 7px;
   caret-size: 1px;
-  selection-background-color: #d41919;
+  selection-background-color: #ec0101;
   selected-color: white;
   transition-duration: 300ms;
   border-radius: 6px;
@@ -56,7 +56,7 @@ stage {
   .popup-menu #notification StEntry:focus, #menu-search-entry:focus, .popup-menu #notification StEntry:hover, #menu-search-entry:hover {
     color: #5C616C;
     background-color: white;
-    border: 1px solid #d41919;
+    border: 1px solid #ec0101;
     box-shadow: inset 0 2px 4px rgba(255, 255, 255, 0.05); }
   .popup-menu #notification StEntry:insensitive, #menu-search-entry:insensitive {
     color: rgba(92, 97, 108, 0.55);
@@ -72,7 +72,7 @@ stage {
   padding: 7px;
   caret-size: 1px;
   caret-color: white;
-  selection-background-color: #d41919;
+  selection-background-color: #ec0101;
   selected-color: white;
   transition-duration: 300ms;
   border-radius: 6px;
@@ -82,8 +82,8 @@ stage {
   box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.05); }
   .notification StEntry:focus {
     color: white;
-    background-color: #d41919;
-    border: 1px solid #d41919;
+    background-color: #ec0101;
+    border: 1px solid #ec0101;
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.05); }
   .notification StEntry:insensitive {
     color: rgba(255, 255, 255, 0.55);
@@ -112,7 +112,7 @@ StScrollBar {
     StScrollBar StButton#vhandle:hover, StScrollBar StButton#hhandle:hover {
       background-color: #cbcccf; }
     StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
-      background-color: #d41919; }
+      background-color: #ec0101; }
 
 .separator {
   -gradient-height: 1px;
@@ -126,7 +126,7 @@ StScrollBar {
   -slider-height: 0.3em;
   -slider-background-color: #e3e3e3;
   -slider-border-color: rgba(250, 250, 250, 0.3);
-  -slider-active-background-color: #d41919;
+  -slider-active-background-color: #ec0101;
   -slider-active-border-color: rgba(250, 250, 250, 0.3);
   -slider-border-width: 1px;
   -slider-handle-radius: 0.5em;
@@ -182,10 +182,10 @@ StScrollBar {
       background-image: url("assets/switch-on.svg"); }
 
 .cinnamon-link {
-  color: #a61414;
+  color: #b90101;
   text-decoration: underline; }
   .cinnamon-link:hover {
-    color: #d41919; }
+    color: #ec0101; }
 
 #Tooltip {
   border: 1px solid #d0d0d0;
@@ -234,7 +234,7 @@ StScrollBar {
   border-right-width: 0; }
   .popup-menu-item:active {
     color: white;
-    background-color: #d41919; }
+    background-color: #ec0101; }
   .popup-menu-item:insensitive {
     color: rgba(92, 97, 108, 0.5);
     background: none; }
@@ -465,16 +465,16 @@ StScrollBar {
   padding: 5px 8px;
   -cinnamon-caption-spacing: 8px; }
   .window-caption:focus {
-    background-color: #d41919;
+    background-color: #ec0101;
     color: white;
-    border: 1px solid #d41919; }
+    border: 1px solid #ec0101; }
 
 .window-border {
-  border: 3px #d41919;
+  border: 3px #ec0101;
   border-radius: 6px;
   background-color: rgba(255, 255, 255, 0.05);
   /* Cover rounded corners and some bad adjustment gaps */
-  box-shadow: 0 0 0 1px #d41919 inset; }
+  box-shadow: 0 0 0 1px #ec0101 inset; }
 
 .overview-empty-placeholder {
   color: #ffffff;
@@ -493,20 +493,20 @@ StScrollBar {
   box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.05); }
   .expo-workspaces-name-entry:focus,
   .expo-workspaces-name-entry#selected:focus {
-    border: 1px solid #d41919;
-    background-color: #d41919;
+    border: 1px solid #ec0101;
+    background-color: #ec0101;
     color: white;
     font-style: italic;
     transition-duration: 300;
     selection-background-color: white;
-    selected-color: #d41919; }
+    selected-color: #ec0101; }
 
 .expo-workspace-thumbnail-frame {
   border: 4px solid rgba(255, 255, 255, 0);
   background-color: rgba(255, 255, 255, 0);
   border-radius: 6px; }
   .expo-workspace-thumbnail-frame#active {
-    border: 4px solid #d41919;
+    border: 4px solid #ec0101;
     background-color: black;
     border-radius: 6px; }
 
@@ -668,7 +668,7 @@ StScrollBar {
 .calendar-today:hover {
   font-weight: bold;
   color: white;
-  background-color: #d41919;
+  background-color: #ec0101;
   border-width: 0; }
 
 .calendar-other-month-day {
@@ -736,11 +736,11 @@ StScrollBar {
     border-radius: 6px; }
     .switcher-list .item-box:outlined {
       padding: 8px;
-      border: 1px solid #d41919; }
+      border: 1px solid #ec0101; }
     .switcher-list .item-box:selected {
       color: white;
-      background-color: #d41919;
-      border: 0px solid #d41919; }
+      background-color: #ec0101;
+      border: 0px solid #ec0101; }
   .switcher-list .thumbnail {
     width: 256px; }
   .switcher-list .thumbnail-box {
@@ -830,7 +830,7 @@ StScrollBar {
     border-radius: 6px;
     caret-color: white;
     selected-color: white;
-    selection-background-color: #d41919;
+    selection-background-color: #ec0101;
     color: white;
     background-color: rgba(82, 82, 82, 0.4);
     border: 1px solid rgba(0, 0, 0, 0.4);
@@ -838,7 +838,7 @@ StScrollBar {
     .run-dialog-entry:focus {
       color: #5C616C;
       background-color: white;
-      border: 1px solid #d41919;
+      border: 1px solid #ec0101;
       box-shadow: inset 0 2px 4px rgba(255, 255, 255, 0.05); }
   .run-dialog .modal-dialog-button-box {
     border: none;
@@ -929,8 +929,8 @@ StScrollBar {
     background-color: rgba(99, 99, 99, 0.5); }
   .keyboard-key:active, .keyboard-key:checked {
     color: white;
-    border: 1px solid #d41919;
-    background-color: #d41919; }
+    border: 1px solid #ec0101;
+    background-color: #ec0101; }
   .keyboard-key:grayed {
     color: #5f5f5f;
     border: 1px solid rgba(0, 0, 0, 0.4);
@@ -957,7 +957,7 @@ StScrollBar {
   border: 1px solid rgba(0, 0, 0, 0);
   border-radius: 6px; }
   .menu-favorites-button:hover {
-    background-color: #d41919; }
+    background-color: #ec0101; }
 .menu-places-box {
   padding: 10px;
   border: 0px solid red; }
@@ -975,7 +975,7 @@ StScrollBar {
   .menu-application-button-selected {
     padding: 7px;
     color: white;
-    background-color: #d41919;
+    background-color: #ec0101;
     border: 1px solid #e3e3e3; }
     .menu-application-button-selected:highlighted {
       font-weight: bold; }
@@ -989,7 +989,7 @@ StScrollBar {
   .menu-category-button-selected {
     padding: 7px;
     color: white;
-    background-color: #d41919;
+    background-color: #ec0101;
     border: 1px solid #e3e3e3; }
   .menu-category-button-hover {
     background-color: red;
@@ -1058,7 +1058,7 @@ StScrollBar {
     border-radius: 6px; }
   .osd-window .level-bar {
     border-radius: 6px;
-    background-color: #d41919; }
+    background-color: #ec0101; }
 
 .window-list-box {
   spacing: 6px;
@@ -1105,9 +1105,9 @@ StScrollBar {
     background-color: rgba(255, 255, 255, 0.1); }
   .window-list-item-box:active, .window-list-item-box:checked, .window-list-item-box:focus, .window-list-item-box:running {
     color: white;
-    border-color: #d41919; }
+    border-color: #ec0101; }
   .window-list-item-box .progress {
-    background-color: rgba(212, 25, 25, 0.8); }
+    background-color: rgba(236, 1, 1, 0.8); }
 .window-list-item-demands-attention {
   background-gradient-direction: vertical;
   background-gradient-start: #D31919;
@@ -1155,9 +1155,9 @@ StScrollBar {
     background-color: rgba(255, 255, 255, 0.3); }
   .grouped-window-list-item-box:active, .grouped-window-list-item-box:checked {
     color: white;
-    border-color: #d41919; }
+    border-color: #ec0101; }
   .grouped-window-list-item-box .progress {
-    background-color: rgba(212, 25, 25, 0.8); }
+    background-color: rgba(236, 1, 1, 0.8); }
 .grouped-window-list-item-demands-attention {
   background-gradient-direction: vertical;
   background-gradient-start: #D31919;
@@ -1188,11 +1188,11 @@ StScrollBar {
     spacing: 4px; }
     .grouped-window-list-thumbnail-menu .item-box:outlined {
       padding: 8px;
-      border: 1px solid #d41919; }
+      border: 1px solid #ec0101; }
     .grouped-window-list-thumbnail-menu .item-box:selected {
       color: white;
-      background-color: #d41919;
-      border: 0px solid #d41919; }
+      background-color: #ec0101;
+      border: 0px solid #ec0101; }
   .grouped-window-list-thumbnail-menu .thumbnail {
     width: 256px; }
   .grouped-window-list-thumbnail-menu .separator {
@@ -1260,9 +1260,9 @@ StScrollBar {
       box-shadow: inset 0 2px 4px rgba(255, 255, 255, 0.05); }
     .sound-player > StBoxLayout:first-child StButton:small:active {
       color: white;
-      background-color: #d41919;
-      border: 1px solid #d41919;
-      box-shadow: inset 0 2px 4px #d41919; }
+      background-color: #ec0101;
+      border: 1px solid #ec0101;
+      box-shadow: inset 0 2px 4px #ec0101; }
 .sound-player-generic-coverart {
   background: rgba(0, 0, 0, 0.2); }
 .sound-player-overlay {
@@ -1289,9 +1289,9 @@ StScrollBar {
       box-shadow: inset 0 2px 4px rgba(255, 255, 255, 0.05); }
     .sound-player-overlay StButton:active {
       color: white;
-      background-color: #d41919;
-      border: 1px solid #d41919;
-      box-shadow: inset 0 2px 4px #d41919; }
+      background-color: #ec0101;
+      border: 1px solid #ec0101;
+      box-shadow: inset 0 2px 4px #ec0101; }
   .sound-player-overlay StBoxLayout {
     padding-top: 2px; }
   .sound-player-overlay > StBoxLayout {
@@ -1303,7 +1303,7 @@ StScrollBar {
   -slider-height: 0.5em;
   -slider-background-color: #e3e3e3;
   -slider-border-color: rgba(0, 0, 0, 0);
-  -slider-active-background-color: #d41919;
+  -slider-active-background-color: #ec0101;
   -slider-active-border-color: rgba(0, 0, 0, 0);
   -slider-border-width: 0px;
   -slider-handle-radius: 0px; }
@@ -1335,10 +1335,10 @@ StScrollBar {
     padding-top: 3px;
     padding-bottom: 3px; }
   .workspace-button:outlined {
-    background-color: #d41919;
+    background-color: #ec0101;
     color: white; }
     .workspace-button:outlined:hover {
-      background-color: rgba(212, 25, 25, 0.7);
+      background-color: rgba(236, 1, 1, 0.7);
       color: white; }
   .workspace-button:hover {
     background-color: rgba(92, 97, 108, 0.2);
@@ -1354,7 +1354,7 @@ StScrollBar {
   background-color: rgba(0, 0, 0, 0.2); }
 
 .workspace-graph .workspace:active {
-  border: 1px solid #d41919; }
+  border: 1px solid #ec0101; }
 
 .workspace-graph .workspace .windows {
   -active-window-background: #262626;
@@ -1377,7 +1377,7 @@ StScrollBar {
     padding-bottom: 2px;
     transition-duration: 200; }
     .panel-launchers .launcher:hover {
-      background-color: #d41919; }
+      background-color: #ec0101; }
   .panel-launchers.vertical {
     padding-top: 2px;
     padding-bottom: 2px;
@@ -1422,7 +1422,7 @@ StScrollBar {
       padding-top: 0; }
   .applet-box:hover, .applet-box:checked {
     color: white;
-    background-color: #d41919; }
+    background-color: #ec0101; }
     .applet-box:hover-label, .applet-box:checked-label {
       color: white; }
   .applet-box:highlight {
@@ -1490,8 +1490,8 @@ StScrollBar {
     padding: 12px;
     padding-bottom: 6px; }
   .desklet-drag-placeholder {
-    border: 2px solid #d41919;
-    background-color: rgba(212, 25, 25, 0.3); }
+    border: 2px solid #ec0101;
+    background-color: rgba(236, 1, 1, 0.3); }
 
 .photoframe-box {
   border: 1px solid #e3e3e3;
@@ -1516,16 +1516,16 @@ StScrollBar {
   max-height: 100px; }
 
 .tile-preview {
-  background-color: rgba(212, 25, 25, 0.3);
-  border: 1px solid #d41919; }
+  background-color: rgba(236, 1, 1, 0.3);
+  border: 1px solid #ec0101; }
   .tile-preview.snap {
-    background-color: rgba(212, 25, 25, 0.6); }
+    background-color: rgba(236, 1, 1, 0.6); }
 
 .tile-hud {
-  background-color: rgba(212, 25, 25, 0.3);
-  border: 1px solid #d41919; }
+  background-color: rgba(236, 1, 1, 0.3);
+  border: 1px solid #ec0101; }
   .tile-hud.snap {
-    background-color: rgba(212, 25, 25, 0.6); }
+    background-color: rgba(236, 1, 1, 0.6); }
   .tile-hud:top {
     border-top-width: 0px; }
   .tile-hud:bottom {
